--- a/graphrag.ipynb
+++ b/graphrag.ipynb
@@ -38,7 +38,10 @@
    "outputs": [],
    "source": [
     "load_dotenv(\".env\")\n",
-    "api_key = os.getenv(\"API_KEY\")"
+    "api_key = os.getenv(\"API_KEY\")\n",
+    "NEO4J_URI = os.getenv(\"NEO4J_URI\")\n",
+    "NEO4J_USERNAME = os.getenv(\"NEO4J_USER\")\n",
+    "NEO4J_PASSWORD = os.getenv(\"NEO4J_PASSWORD\")"
    ]
   },
   {
